# cog

./: .codecov.yml  .gitignore  .travis.yml  CNAME  LICENSE  PERFORMANCE_ROADMAP.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: FUNDING.yml
cog/: QueryEngine.py  __init__.py  block.py  cache.py  cloud_client.py  codec.py  config.py  core.py  core2.py  database.py  db.py  embedding_providers.py  embeddings.py  export.py  gossip.py  matrix_graph.py  memory_view.py  migrate.py  parser.py  query_engine.py  queryengine.py  remote.py  search.py  server.py  share.py  spindle_pack.py  store_cache.py  templates.py  torque.py  tunnel.py  view.py
docs/: Untitled Diagram.xml  cog-logo.xml  cog_logo_v2.gliffy  notes
scripts/: local_wheel_server.py  pyodide_test_server.py
templates/: graph.html  graph2.html  graph3.html  view.js
test/: Insert_Perf_Test.py  bench.py  benchmark.py  benchmark_embeddings.py  benchmark_gensim_embeddings.py  benchmark_spindle_pack.py  benchmark_store_read.py  conftest.py  context.py  core_test.py  db_test.py  db_test_2.py  get_bench.py  index_test.py  indexer_test.py  insert_bench.py  lib_test.py  parser_test.py  queryEngine_test.py  query_engine_test.py  test_batch_mode.py  test_cache.py  test_cloud.py  test_cloud_parity.py  test_collisions.py  test_core.py  test_core_coverage.py  test_database_coverage.py  test_db.py  test_db_2.py  test_edge_operations.py  test_embeddings.py  test_eof_error.py  test_export.py  test_file_count.py  test_format_detection.py  test_functions.py  test_graph_path.py  test_index.py  (+30 more)
(+16 files in other folders)
