[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cogdb"
version = "3.4.0"
description = "Persistent Embedded Graph Database"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Arun Mahendra", email = "arunm3.141@gmail.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "xxhash==3.2.0",
    "simsimd>=5.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://cogdb.io"
Repository = "https://github.com/arun1729/cog"
Issues = "https://github.com/arun1729/cog/issues"

[tool.setuptools.packages.find]
include = ["cog*"]
